--- a/index.html
+++ b/index.html
@@ -1,107 +1,172 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@Amangupta0918 
+SAMUDRALAARAVIND
+/
+march-accio
+Public
+Fork your own copy of SAMUDRALAARAVIND/march-accio
+Code
+Issues
+Pull requests
+Actions
+Projects
+Security
+Insights
+march-accio/contest2/index.html
+@SAMUDRALAARAVIND
+SAMUDRALAARAVIND Add files via upload
+Latest commit b37697c 2 days ago
+ History
+ 1 contributor
+128 lines (126 sloc)  5.58 KB
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="simple notepad.css", rel="stylesheet">
-    </link>
-
-    
-
-    <title>Document</title>
+    <title>Contest 2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            border: none ;
+            color: white;
+        }
+        body{
+            font-family: 'Source Sans Pro', sans-serif;
+            background-color: #1F1F1F;
+        }
+    </style>
+    <link rel="stylesheet" href="./index.css">
 </head>
-<body >
-    <div id="home">
+<body>
     <header>
-        <a class="navbar-brand centre-element" href="#">Forent</a>
-        <input type="text" placeholder="search" class="nav-search centre-element">
-        <button class="nav-btn">Login</button>
-        <button class="nav-btn">Explore</button>
-        <button class="nav-btn">Rent</button>
+        <nav>
+            <h1>Forent</h1>
+            <div>
+                <input type="text" placeholder="Search">
+                <button>Login</button>
+                <button>Explore</button>
+                <button>Rent</button>
+            </div>
+        </nav>
+        <section class="header-section">
+            <h1>About Us</h1>
+            <div class="header-container">
+                <div class="header-left">
+                    <div class="item">
+                        <img src="./images/cart.png" class="small-img" >
+                        <p>Rent Out Anything You Want</p>
+                    </div>
+                    <div class="item">
+                        <img src="./images/offer.png" class="small-img">
+                        <p>No worries about items getting lost</p>
+                    </div>
+                    <div class="item">
+                        <img src="./images/card.png" class="small-img" alt="">
+                        <p>Online Payments Only </p>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <img src="./images/timer.png" alt=""  class="large-img">
+                    <button>Know More</button>
+                </div>
+            </div>
+        </section>
     </header>
-    <section id="category">
-        <h2 class="about-heading">Our Categories</h2>
-        <div class="category-card-container">
-            <div class="category-card">
-                <div class="category-card-heading">Electronics</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+
+    <section class="categories-section">
+        <h2>Our Categories</h2>
+        <div class="cards-container">
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            <div class="category-card">
-                <div class="category-card-heading">Clothes / Apparel</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            <div class="category-card">
-                <div class="category-card-heading">Gaming</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            <div class="category-card">
-                <div class="category-card-heading">Gaming</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            <div class="category-card">
-                <div class="category-card-heading">Clothes / Apparel</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            <div class="category-card">
-                <div class="category-card-heading">Gaming</div>
-                <div class="category-card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-                <div class="category-card-btn">
-                    <button>
-                        Know More
-                    </button>
-                </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
             </div>
-            
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
+            </div>
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur harum, velit unde non enim sequi quasi hic, ipsum iste quae esse ullam qui autem! Dolore id ullam repudiandae ratione ea.</p>
+                <button>Know More</button>
+            </div>
         </div>
     </section>
 
-
     <footer>
-        <div class="footer-content">
+        <div style="width: 60%">
             <h2>Forent</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat cum tempora suscipit magnam nihil laborum perspiciatis eligendi, aperiam quaerat unde.</p>
         </div>
-        <div class="footer-content">
-            <h3>Site Map</h3>
-            <div class="footer-links">Home</div>
-            <div class="footer-links">Search</div>
-            <div class="footer-links">Explore</div>
-            <div class="footer-links">Login/Signup</div>
+        <div>
+            <h2>Site Map</h2>
+            <a href="#">Home</a>
+            <a href="#">Search</a>
+            <a href="#">Explore</a>
+            <a href="#">login/signup</a>
         </div>
-        <div class="footer-content">
-            <h3>Socials</h3>
-            <div class="footer-links">Instagram</div>
-            <div class="footer-links">Facebook</div>
-            <div class="footer-links">LinkedIn</div>
-            <div class="footer-links">Twitter</div>
+        <div>
+            <h2>Socials</h2>
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Twitter</a>
         </div>
     </footer>
-</div>
 </body>
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+march-accio/index.html at master · SAMUDRALAARAVIND/march-accio
